--- a/angular.json
+++ b/angular.json
@@ -30,10 +30,14 @@
               "src/favicon.ico",
               "src/assets"
             ],
-            "styles": [
-              "src/styles.scss"
+            "scripts": [
+              "node_modules/jquery/dist/jquery.min.js"
             ],
-            "scripts": []
+            "styles": [
+              "node_modules/@fortawesome/fontawesome-free/css/all.css",
+              "src/styles.scss",
+              "node_modules/bootstrap/dist/css/bootstrap.min.css"
+            ]
           },
           "configurations": {
             "production": {
