--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "bootstrap": "^4.6.1",
     "firebase": "^9.14.0",
     "jquery": "^3.6.0",
+    "ng-recaptcha": "^11.0.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
