--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "~13.3.12",
     "@angular/router": "~13.3.12",
     "@fortawesome/fontawesome-free": "^6.2.1",
+    "angular-froala-wysiwyg": "^4.0.16",
     "bootstrap": "^4.6.1",
     "firebase": "^9.14.0",
     "jquery": "^3.6.0",
