--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "~13.3.12",
     "@fortawesome/fontawesome-free": "^6.2.1",
     "angular-froala-wysiwyg": "^4.0.16",
+    "animate.css": "^4.1.1",
     "bootstrap": "^4.6.1",
     "firebase": "^9.14.0",
     "jquery": "^3.6.0",
